src/objects/dupcheck__dcDiscard__c.object
<CustomObject>
    <label>DC Discard</label>
    <nameField>
        <displayFormat>DCDIS{00000000}</displayFormat>
        <label>Duplicate Check Discard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC Discards</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>dupcheck__Relation__c</fullName>
        <label>Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False Duplicate</fullName>
                    <default>true</default>
                    <label>False Duplicate</label>
                </value>
                <value>
                    <fullName>Parent - Child</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__objectA__c</fullName>
        <label>Object A</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__objectB__c</fullName>
        <label>Object B</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__recordA__c</fullName>
        <externalId>true</externalId>
        <label>Record A</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__recordB__c</fullName>
        <externalId>true</externalId>
        <label>Record B</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>dupcheck__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>